--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-.venv/
-__pycache__/
+# Environment
 .env
+
+# Python
+__pycache__/
+*.pyc
+
+# Local data files
+uploads/
+data/
+#backend/clean_transcript.txt
+
+# Vector DB
+vector_db/
+
+# OS files
+.DS_Store
+Thumbs.db
